freestar-prebid-core 2.1.1.1 released;  fixed clicktrackers and eventtrackers being buried under native object and not at the older 1.1 adm level.  pbs server could be only supporting 1.1 and not 1.2 which inmobi apparently adheres to.

--- a/PrebidMobile/PrebidMobile-core/build.gradle
+++ b/PrebidMobile/PrebidMobile-core/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //implementation project(":omsdk-android")
+    //implementation project(":omsdk-android") //kkawai
 
     implementation 'androidx.annotation:annotation:1.5.0'
 
